fixed some alignment and spacing

--- a/main.css
+++ b/main.css
@@ -707,7 +707,7 @@ p {
   background-color: #457b9d;
   border: 5px solid #1d3557;
   color: #f1faee;
-  padding: 5px 20px;
+  padding: 3px 20px;
 }
 
 .contactb:hover {
